# dd_suite

./: .gitignore  LICENSE  README.jp.md  README.md  pyproject.toml
dd_suite/: __init__.py  adapters.py  cli.py  dispatch.py  envs.py  pipelines.py
scripts/: install_all.py
tests/: test_adapters.py  test_dispatch.py
